Fixed animation main menu jumping

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1465,7 +1465,8 @@ canvas {
   --nh3d-dialog-fixed-actions-bg: #040c18;
   padding-bottom: 0;
 
-  &.is-visible {
+  &.is-visible,
+  &.is-exiting {
     display: flex;
     flex-direction: column;
   }
